// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test language reducer should change language 1`] = `
Object {
  "language": 1,
}
`;

exports[`test language reducer should return default state 1`] = `
Object {
  "language": 0,
}
`;
